--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/three": "^0.84.27",
-    "three": "^0.87.1"
+    "three": "^0.87.1",
+    "three-trackballcontrols": "0.0.6"
   }
 }
