--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": false,
     "module": "commonjs",
     "lib": [
-      "dom", "es6"
+      "dom", "es6", "es2017"
     ],
     "target": "es5",
     "allowJs": true
