--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
   "devDependencies": {
     "@types/node": "7.0.0",
     "awesome-typescript-loader": "3.0.0-beta.18",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "source-map-loader": "0.1.6",
     "tslint": "4.3.1",
     "tslint-loader": "3.3.0",
-    "typescript": "2.1.5",
-    "webpack": "2.2.1",
+    "typescript": "^2.6.2",
+    "webpack": "^2.2.1",
     "webpack-dev-server": "2.2.1"
   },
   "dependencies": {
+    "@types/dat-gui": "^0.6.3",
     "@types/three": "^0.84.27",
+    "dat.gui": "^0.6.5",
     "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
     "img-loader": "^2.0.0",
+    "style-loader": "^0.19.0",
     "three": "^0.87.1",
     "three-trackballcontrols": "0.0.6",
     "url-loader": "^0.6.2"
